@@ -1,5 +1,6 @@
 DATE       AUTHOR       CHANGE
 ---------- -----------  -------------------------------------------------------
+2002-11-02 nonchocoboy  Decoupled level loading and the GameState.
 2002-11-01 nonchocoboy  Added in a temporally coherant collision detector using
                         an AABox sweep test.
                         NEW VERSION: 0.3.1
